Restore surefire for tests